--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
- /* * {  
+/* * {   
     outline: dotted 1px red;
 }*/
 
@@ -7,68 +7,63 @@ html {
 }
 
 body {
-    margin: 30;
-    background: gray; 
-    font-family: Helvetica;
+    height: 100%;
+    background: white; 
+    font-family: sans-serif;
 }
 
 header {
-    width: 90%;
-    padding: 10px;
-    height: 100px;
-    color: white;
-    background: black;
-    text-shadow: 1px 1px 1px #000;
-    text-align: center;
+  color: black;
+  height: 30px;
+  font-weight: bold;
+  text-shadow: 10px 10px 10px;
+  text-align: center;
+  padding: 20px 20px;
 }
 
-section {
-    width: 90%; 
-    margin: 0 auto;
-    padding: 5px; 
-    min-height: 800px; 
+nav {
+  text-align: center;
 }
 
-main {
-    width: 90%; 
-    margin: 0 auto;
-    padding: 5px; 
-    min-height: 800px; 
+li {
+  display: inline-block;
+  padding-right: 20px;
 }
 
-ul li:first-child {
-    display: inline-block;
-    padding: 10px;
-    margin-left: 500px;
-    margin-right: 0px;
+a {
+  color: gray;
+  text-shadow: 5px 5px 5px;
 }
 
-a:link {
-    color: green; 
-    background-color: transparent; 
-    text-decoration: none;
-  }
-  
-  a:visited {
-    color: pink;
-    background-color: transparent;
-    text-decoration: none;
-  }
-  
-  a:hover {
-    color: red;
-    background-color: transparent;
-    text-decoration: underline;
-  }
-  
-  a:active {
-    color: yellow;
-    background-color: transparent;
-    text-decoration: underline;
-  }
-
-ul li:last-child {
-    display: inline-block;
-    padding: 10px;
-    margin-left: 0%;
+a:hover {
+  color: red;
 }
+
+img {
+  float: left;
+  width: 30%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  padding-right: 1%;
+}
+
+article {
+  padding-left: 1%;
+  padding-top: 2%;
+  padding-bottom: 10px;
+}
+
+footer {
+  position: fixed;
+  color: black;
+  font-weight: bold;
+  font-size: 80%; 
+  bottom: 0;
+  text-align: center;
+  text-shadow: 5px 5px 5px;
+  padding-left: 45%;
+  padding-top: 2%;
+  padding-bottom: 1%;
+  opacity: 0.5;
+}
+
